# Process this file with automake to produce Makefile.in

sanewallconfdir = $(sysconfdir)/sanewall
servicesconfdir = $(sysconfdir)/sanewall/services

sanewallconf_DATA = \
	sanewall.conf.example

servicesconf_DATA = \
	bittorrent.conf.example

EXTRA_DIST = \
	sanewall.conf.example \
	bittorrent.conf.example
