# Process this file with automake to produce Makefile.in

HISTORICHTML = \
	css.css \
	index.html \
	adding.html \
	commands.html \
	faq.html \
	fwtest.html \
	header.html \
	invoking.html \
	language.html \
	overview.html \
	search.html \
	services.html \
	support.html \
	trouble.html \
	tutorial.html

HISTORICHTML_EXTRA = \
	create_services.sh

EXTRA_DIST = \
	$(HISTORICHTML) \
	$(HISTORICHTML_EXTRA)
